Feat(BE): Consulta HTTP del historial de cambios médicos. RFG-96
